[package]
name = "echo"
version = "0.1.0"
authors = ["Zach Peterson"]
edition = "2021"
description = "display a line of text"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }

[build-dependencies]
clap_mangen = "0.2.15"
clap = { version = "4.4.7", features = ["derive"] }
